make editing conditional formats more obvious, related fdo#57895

Change-Id: I2ea95a204fbbd0d36a8fb1374e41aa5aae3cf410